added a repo list for our user

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     </form>
 
     <div id='github-container'>
-      <ul id='user-list'>
+      <ol id='user-list'>
 
-      </ul>
+      </ol>
 
       <ul id='repos-list'>
 
