added event listener that when clicked shows userrepos

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     </form>
 
     <div id='github-container'>
-      <ol id='user-list'>
+      <ul id='user-list'>
 
-      </ol>
+      </ul>
 
       <ul id='repos-list'>
 
